--- a/tabs.html
+++ b/tabs.html
@@ -141,7 +141,7 @@
                 <div class="tab-pane fade in active" id="first${$index}">
                     <div class="buildMessage">
                       <textarea class="form-control" placeholder="Type your message here .."></textarea>
-                      <a href="#" class="btn btn-large btn-primary"><span class="glyphicon glyphicon-pencil"></span>POST</a>
+                      <a href="#" class="btn btn-large btn-primary" id="post"><span class="glyphicon glyphicon-pencil"></span>POST</a>
 
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                       <div class="input-group">
                         <input type="text" class="form-control">
                         <span class="input-group-btn">
-                          <button class="btn btn-primary" type="button">Add User</button>
+                          <button class="btn btn-primary" type="button" id="add">Add User</button>
                         </span>
                       </div>
                   </div>
@@ -162,7 +162,7 @@
                       <div class="input-group">
                         <input type="text" class="form-control">
                         <span class="input-group-btn">
-                          <button class="btn btn-primary" type="button">Delete User</button>
+                          <button class="btn btn-primary" type="button" id="delete">Delete User</button>
                         </span>
                       </div>
                   </div>                
