--- a/user.html
+++ b/user.html
@@ -64,7 +64,7 @@
         <div class="buildMessage">
           <textarea class="form-control" placeholder="Type your message here .."></textarea>
           
-          <a href="#" class="btn btn-large btn-primary"><span class="glyphicon glyphicon-pencil"></span>POST</a>
+          <a href="#" class="btn btn-large btn-primary" id="post"><span class="glyphicon glyphicon-pencil"></span>POST</a>
           
         </div>
 
